k8s-manifests/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-devops-app
  namespace: default
spec:
  selector:
    app: netology-devops-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
